tests/ui/not-quotable.stderr
error[E0277]: the trait bound `Ipv4Addr: ToTokens` is not satisfied
 --> tests/ui/not-quotable.rs:6:13
  |
6 |     let _ = quote! { #ip };
  |             ^^^^^^^^^^^^^^
  |             |
  |             the trait `ToTokens` is not implemented for `Ipv4Addr`
  |             required by a bound introduced by this call
  |
note: there are multiple different versions of crate `quote` in the dependency graph
 --> src/to_tokens.rs
  |
  | pub trait ToTokens {
  | ^^^^^^^^^^^^^^^^^^ this is the expected trait
  |
 ::: $RUST/proc_macro/src/to_tokens.rs
  |
  | pub trait ToTokens {
  | ------------------ this is the trait that was imported
  = help: you can use `cargo tree` to explore your dependency tree
  = help: the following other types implement trait `ToTokens`:
            &T
            &mut T
            Box<T>
            CStr
            CString
            Cow<'a, T>
            Option<T>
            Rc<T>
          and $N others
  = note: this error originates in the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
